final site complete

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -69,6 +69,7 @@
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
   margin-left: 10px;
+  width: 80%;
 }
 
 .footer-container {
