--- a/app/src/CandyMachine/CandyMachine.css
+++ b/app/src/CandyMachine/CandyMachine.css
@@ -1,6 +1,24 @@
 .machine-container {
   display: flex;
   flex-direction: column;
+  background: rgb(97, 148, 61);
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+  padding-bottom: 2%;
+  margin-top: 20px;
+  font-size: 24px;
+  color: black;
+  font-weight: bold;
+}
+
+.machine-container p {
+  margin: 10px;
+}
+
+.machine-container button {
+  margin-top: 10px;
+  color: white;
 }
 
 .gif-container {
